// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MainMenuIcon should be rendered correctly 1`] = `
<button
  className="container uui-button-box uui-enabled root icon-color-gray60 container"
  href={null}
  onClick={[Function]}
  role="button"
  tabIndex={-1}
>
  <div
    className="container uui-icon uui-enabled"
    style={Object {}}
  >
    <SvgrURL
      className=""
    />
  </div>
</button>
`;

exports[`MainMenuIcon should be rendered correctly 2`] = `
<a
  className="container uui-button-box uui-enabled -clickable root icon-color-gray60 container"
  onClick={[Function]}
  role="link"
  tabIndex={-1}
  target="_blank"
>
  <div
    className="container uui-icon uui-enabled"
    style={Object {}}
  >
    <SvgrURL
      className=""
    />
  </div>
</a>
`;
